force-app/main/default/objects/Retail_Update_Stock_Form__c/Retail_Update_Stock_Form__c.object-meta.xml
<CustomObject>
    <label>Retail Update Stock Form</label>
    <nameField>
        <label>Update Stock Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Retail Update Stock Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>