force-app/main/default/objects/Retail_Update_Stock_Form__c/fields/Add_Product__c.field-meta.xml
<CustomField>
    <fullName>Add_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Add Product</label>
    <referenceTo>Retail_Product__c</referenceTo>
    <relationshipName>Update_Stock_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>