force-app/main/default/objects/Retail_Update_Stock_Form__c/fields/Add_stock__c.field-meta.xml
<CustomField>
    <fullName>Add_stock__c</fullName>
    <label>Add stock</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>