force-app/main/default/objects/Retail_Update_Stock_Form__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Add_Product__c</columns>
    <columns>Add_stock__c</columns>
    <columns>Available_Stock__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>